--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.0.2",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@types/styled-components": "^5.1.12",
+    "axios": "^0.22.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.3.0",
